# chatgpt-functions

./: .gitignore  Cargo.toml  README.md
examples/: talk.rs  talk_with_functions.rs  talk_with_functions_json.rs
src/: chat_context.rs  chat_gpt.rs  chat_response.rs  escape_json.rs  function_specification.rs  lib.rs  message.rs
