[package]
name = "chatgpt-functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "talk"
path = "examples/talk.rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.28", features = ["full"] }
uuid = { version = "1.3", features = ["v4"] }