[package]
name = "chatgpt-functions"
version = "0.3.1"
categories = ["api-bindings"]
description = "This crate provides a wrapper around the OpenAI API to use GPT-3.5 and GPT-4 for chatbots. It also provides a way to define functions that can be called from the chatbot."
edition = "2021"
keywords = ["chatbot", "openai", "gpt-3", "gpt-4", "chatgpt"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ainestal/chatgpt-functions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "talk"
path = "examples/talk.rs"

[[example]]
name = "talk_with_functions"
path = "examples/talk_with_functions.rs"

[[example]]
name = "talk_with_functions_json"
path = "examples/talk_with_functions_json.rs"


[dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1"
uuid = { version = "1.3", features = ["v4"] }

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.28", features = ["full"] }